--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-<h1>Raphaël MONDIA - Sivadjy PARASSOURAMIN LATCHIMY</h1>
-<p>Sujet traité etc...</p>
+<h1>Raphael MONDIA - Sivadjy PARASSOURAMIN LATCHIMY</h1>
+<p>Sujet traite etc...</p>
 
 </body>
 </html>
