--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Majeur IF Groupe 6</title>
-  
+ 
   <!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	
@@ -17,12 +16,12 @@
 
 <h1>Raphael MONDIA - Sivadjy PARASSOURAMIN LATCHIMY</h1>
 <p>Main Menu</p>
-    <a href = "/bitcoin">Bitcoin</a><br>
-    <a href = "/WS/info/">Info</a><br>
-    <a href = "/WS/blockchaininfo/">Blockchaininfo</a><br>
-    <a href = "/WS/mininginfo/">Mininginfo</a><br>
-    <a href = "/WS/peerinfo/">Peerinfo</a><br>
-    <a href = "/bitcoin/currency/">cCrrency</a><br>
+    <a href = "./bitcoin">Bitcoin</a><br>
+    <a href = "./WS/info/">Info</a><br>
+    <a href = "./WS/blockchaininfo/">Blockchaininfo</a><br>
+    <a href = "./WS/mininginfo/">Mininginfo</a><br>
+    <a href = "./WS/peerinfo/">Peerinfo</a><br>
+    <a href = "./bitcoin/currency/">cCrrency</a><br>
 
 </body>
 </html>
