--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 
-<!DOCTYPE html>
 <html>
-<head>
- 
-  <!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <head>
+	<script type="text/javascript" src="./js/jquery.js"></script>
 	
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	<link rel="stylesheet" media="all" type="text/css" href="./styles/design.css"/>
+    <!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <title> Index</title>
+  </head>
 
-  <link rel="stylesheet"    		media="all"		type="text/css" 	href="./styles/design.css"   />
-  <script type="text/javascript" src="../js/jquery.js"></script>
-</head>
-<body>
+  <body>
+   	<h1>Raphaël MONDIA - Sivadjy PARASSOURAMIN LATCHIMY</h1>
+	
+    	<p> Ceci est la page principale </p>
+  
+	  <p><a href="./bitcoin">Bitcoin</a></p>
+	  	<p><a href="./bitcoin/currency">Bitcoin/Currency</a></p>
+		<p><a href="./bitcoin/explorer">Bitcoin/explorer</a></p>
+   	 <p><a href="./WS/info">Info</a></p>
+	 <p><a href="./WS/blockchaininfo">BlockChainInfo</a></p>
+	 <p><a href="./WS/mininginfo">MiningInfo</a></p>
+	 <p><a href="./WS/peerinfo">PeerInfo</a></p>
+	
+  </body>
 
-<h1>Raphael MONDIA - Sivadjy PARASSOURAMIN LATCHIMY</h1>
-<p>Main Menu</p>
-    <a href = "./bitcoin">Bitcoin</a><br>
-    <a href = "./WS/info/">Info</a><br>
-    <a href = "./WS/blockchaininfo/">Blockchaininfo</a><br>
-    <a href = "./WS/mininginfo/">Mininginfo</a><br>
-    <a href = "./WS/peerinfo/">Peerinfo</a><br>
-    <a href = "./bitcoin/currency/">cCrrency</a><br>
-
-</body>
 </html>
 
