--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
    	<h1>Raphaël MONDIA - Sivadjy PARASSOURAMIN LATCHIMY</h1>
 	
-    	<p> Ceci est la page principale </p>
+    	<p> Main Menu </p>
   
 	  <p><a href="./bitcoin">Bitcoin</a></p>
 	  	<p><a href="./bitcoin/currency">Bitcoin/Currency</a></p>
@@ -27,6 +27,14 @@
 	 <p><a href="./WS/peerinfo">PeerInfo</a></p>
 	
   </body>
+	
+  <style>
+    body{
+	    background-color:blue;
+	    color:#fff
+		text:align:center;
+	  }
+	</style>
 
 </html>
 
