--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
   </body>
 	
   <style>
-    body{
-	    background-color:green;
-	    color:#fff
-		text-align:center;
+	  body{
+		  background-color:green;
+		  color:#fff;
+		  text-align: center;
 	  }
-	</style>
+  </style>
 
 </html>
 
